2011-01-08  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.61 released.

        * Added more new code to support FullAuto 'Plan'
          functionality. Functionality now WORKS.


2010-12-31  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.60 released.

        * HAPPY NEW YEAR!

        * Added LOTS of new code to support FullAuto 'Plan'
          functionality.


2010-12-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.59 released.

        * Updated error handling code for eval-ing FullAuto
          subroutines from subfile.


2010-10-26  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.58 released.

        * Initialized Config values to avoid warning.


2010-10-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.57 released.

        * Changed way Module::Load::Conditional loads so that
          it's not required to run Term::Menus


2010-10-10  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.56 released.

        * Added new ability to define result with anonymous
          subroutine - with macros in the subroutine. This
          new feature is not yet documented.


2010-09-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.55 released.

        * Fixed Bug #32350 for Term-Menus:
          Using &selected(]Selected[) does not always work
          - found bug in fix for 1.54


2010-09-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.54 released.

        * Fixed Bug #32350 for Term-Menus:
          Using &selected(]Selected[) does not always work

        * Improved Error reporting in certain routines


2010-09-17  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.53 released.

        * Added requires Module::Load::Conditional to
          Makefile.PL in attempt to clean up CPAN
          testers reports.

