@@ -14,10 +14,10 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 8da72c2c236c9c835cae3435977e1e4e6b4e3451 ChangeLog
+SHA1 c27e209309556b07c8df77690fa5aa075dda1055 ChangeLog
 SHA1 a74125560a260a18a646ef0b3702e1b77a45b931 LICENSE
 SHA1 536d4ce30b1934be585da55e463477877c31fe8c MANIFEST
-SHA1 f646ceff703848726a02515a2ce23cb8322865a6 META.yml
+SHA1 e40ebbeffad7c4b1328006c9a3b9f47d1777119e META.yml
 SHA1 df15cac91cca52b6a2e582f9c64c5196e04bba71 Makefile.PL
 SHA1 dd0ef50a94b1bbe303b0f05c353dfe97cda04f3b README
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
@@ -31,13 +31,13 @@ SHA1 b721c93ca5bc9a6aa863b49af15f1b1de6125935 inc/Module/Install/Makefile.pm
 SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 e7b9223a915ad8e637296aa3257fe932f54d7028 lib/Term/Menus.pm
+SHA1 1d77ccc2be38479dadfca51424a36bb142bb793d lib/Term/Menus.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 ded9def7d10cf71606da96112acc159e0aa9a582 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAk0pPQMACgkQdsVAdUjO9IlDSQCfROym0LjkdobdJesW8xLWWMT1
-fgMAn3kiRIGX0vtXm9LYHubI1zrAYfWt
-=WWqg
+iEYEARECAAYFAk0rum8ACgkQdsVAdUjO9InEMACfUpMlY1FVexpNhf0I3M6hQ5Zm
+8/EAnROB1RodPUPevU3t2bLvGMpxFoZk
+=j8EV
 -----END PGP SIGNATURE-----
