@@ -1,3 +1,11 @@
+2011-01-10  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 1.62 released.
+
+        * Added more new code to support FullAuto 'service/daemon'
+          functionality. Functionality now WORKS.
+
+
 2011-01-08  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 1.61 released.
